completed index contact policy

--- a/contact.html
+++ b/contact.html
@@ -55,10 +55,11 @@
         <h1>Interested in career opportunities with Fathom?</h1>
         <h3>Check our our open positions at the link below.</h3>
         <h6>EXPLORE CAREERS</h6>
-        <img
-          src="https://cdn2.hubspot.net/hubfs/6570376/hub_generated/resized/1af430d8-cc35-4ae0-8e0c-23bdaad97d25.png"
-          alt=""
-        />
+        <a href="guide.html">
+          <img
+            src="https://cdn2.hubspot.net/hubfs/6570376/hub_generated/resized/1af430d8-cc35-4ae0-8e0c-23bdaad97d25.png"
+            alt=""
+        /></a>
       </div>
     </div>
 
