team page completed

--- a/team.html
+++ b/team.html
@@ -161,7 +161,7 @@
                                 <div class="case-study-logo">
                                     <img src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5ea20cc4a9bb6c61ceb12d53_gv.svg" alt="">
                                 </div>
-                                <div class="descriptor">FORMERLY&nbsp;GOOGLE&nbsp;VENTURES</div>
+                                <div class="descriptor">FORMERLY GOOGLE VENTURES</div>
                             </div>
                         </div>
                         <div class="centered-grid-item">
@@ -169,7 +169,7 @@
                                 <div class="case-study-logo">
                                     <img src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5ea211634ec0809b10070bec_ff.svg" alt="">
                                 </div>
-                                <div class="descriptor">FOUNDERS&nbsp;FUND</div>
+                                <div class="descriptor">FOUNDERS FUND</div>
                             </div>
                         </div>
                     </div>
