links added into navbar and services page

--- a/services.html
+++ b/services.html
@@ -20,7 +20,9 @@
             <div class="heading_subtitle">
               Fathom's AI seamlessly integrates into your workflow
             </div>
-            <a href="" class="button heading_button">GET STARTED</a>
+            <a href="./schedule.html" class="button heading_button"
+              >GET STARTED</a
+            >
           </div>
         </div>
       </div>
@@ -61,7 +63,9 @@
               critical charts while drastically reducing your overall coding
               costs.
             </p>
-            <a href="" class="button button_outline">REQUEST A CALL</a>
+            <a href="./schedule.html" class="button button_outline"
+              >REQUEST A CALL</a
+            >
           </div>
         </div>
       </div>
@@ -81,7 +85,9 @@
               flags any that may represent a potential denial or unnecessary
               downcoding.
             </p>
-            <a href="" class="button button_outline">REQUEST A CALL</a>
+            <a href="./schedule.html" class="button button_outline"
+              >REQUEST A CALL</a
+            >
           </div>
           <div>
             <img
@@ -113,7 +119,9 @@
               flags any that may represent a potential denial or unnecessary
               downcoding.
             </p>
-            <a href="" class="button button_outline">REQUEST A CALL</a>
+            <a href="./schedule.html" class="button button_outline"
+              >REQUEST A CALL</a
+            >
           </div>
         </div>
       </div>
@@ -194,7 +202,10 @@
               </p>
             </div>
           </div>
-          <a href="" class="button button_outline" id="benefit_btn"
+          <a
+            href="./schedule.html"
+            class="button button_outline"
+            id="benefit_btn"
             >REQUEST A CALL</a
           >
         </div>
