--- a/guide.html
+++ b/guide.html
@@ -20,8 +20,8 @@
             <div class="row row-align-center"></div>
             <div class="mid-container">
                 <div class="mid-col mid-col-2">
-                    <h1 class="label-header text-white">GET THE GUIDE</h1>
-                    <h1 class="heading">RFP guide for outsourced medical coding services</h1>
+                    <h1 class="label-header text-white">GET&nbsp;THE&nbsp;GUIDE</h1>
+                    <h1 class="heading">RFP&nbsp;guide for outsourced medical coding services</h1>
                 </div>
                 <div class="mid-col mid-col-1">
                     <div class="header-image-guide shadow-large">
