--- a/cookie.html
+++ b/cookie.html
@@ -11,6 +11,7 @@
 <body>
      <!-- header section -->
      <div id="navbar_container"></div>
+     <div class="nav_pos_container">
     <!-- !Top banner -->
 
     <div class="section banner width-section nav_pos_container">
@@ -119,6 +120,7 @@
     
     <!-- footer section -->
      <div id="footerfun_section"></div>
+    </div>
 </div>
 </body>
 </html>
