--- a/guide.html
+++ b/guide.html
@@ -11,9 +11,9 @@
 <body>
     <!-- navbar -->
     <div id="navbar_container"></div>
-
-    <!-- newbanner -->
-    <div class="sectionb banner b-section nav_pos_container">
+    <div class="nav_pos_container">
+           <!-- newbanner -->
+    <div class="sectionb banner b-section">
         <div class="container">
             <div class="section-title"></div>
             <!-- blank row div -->
@@ -67,7 +67,8 @@
             </script><div class="hbspt-form" id="hbspt-form-1661419078107-1961473683"><iframe title="Form 0" id="hs-form-iframe-0" class="hs-form-iframe" scrolling="no" width="100%" style="width: 100%; position: static; border: none; display: block; overflow: hidden; height: 362px;" height="362"></iframe></div></div></div></div><div class="contact-columns w-row"><div class="contact-column w-col w-col-6"></div><div class="contact-column w-col w-col-6"></div></div></div></div>
       <!-- footer section -->
       <div id="footerfun_section"></div>
-    
+    </div>
+ 
 </body>
 </html>
 <script src="#"></script>
