completed from my side

--- a/contact.html
+++ b/contact.html
@@ -9,103 +9,131 @@
     <link rel="stylesheet" href="Style/navbar_style.css" />
   </head>
   <body>
-    <div id="nav_container"></div>
-    <div class="container nav_pos_container"></div>
-    <div id="header">
-      <div id="title">
-        <h1>Ready to supercharge your coding operations?</h1>
-        <p>
-          Request a call to get a free analysis of your coding operations to
-          demonstrate what Fathom can do for you.
-        </p>
+    <div id="navbar_container"></div>
+    <div class="nav-pos-container">
+      <div id="header">
+        <div id="title">
+          <h1>Ready to supercharge your coding operations?</h1>
+          <p>
+            Request a call to get a free analysis of your coding operations to
+            demonstrate what Fathom can do for you.
+          </p>
+        </div>
       </div>
-    </div>
 
-    <div id="bigbox">
-      <div id="sideboxa">
-        <h1>Request a call</h1>
+      <div id="bigbox">
+        <div id="sideboxa">
+          <h1>Request a call</h1>
+          <p>
+            Our team would love to work with you to understand your current
+            operation and provide a free automation ROI analysis.
+          </p>
+
+          <form id="form">
+            <label for="">First Name<span>*</span></label>
+            <input type="text" required />
+            <label for="">Last Name<span>*</span></label>
+            <input type="text" required />
+            <label for="">Company Email<span>*</span></label>
+            <input type="email" required />
+            <label for="">Phone Number<span>*</span></label>
+            <input type="number" name="" id="" required />
+            <label for="">Message</label>
+            <input type="text" name="" id="" required />
+            <div>
+              <input type="checkbox" name="" id="checkbox" /> Yes, I want to
+              subscribe to Fathom blog updates.
+            </div>
+
+            <input id="submit" type="submit" />
+          </form>
+        </div>
+        <div id="sidebarb">
+          <h1>Not ready for a call yet?</h1>
+          <h3>We would love to send you some additional details.</h3>
+          <h6>REQUEST A WHITE PAPER</h6>
+          <h1>Interested in career opportunities with Fathom?</h1>
+          <h3>Check our our open positions at the link below.</h3>
+          <h6>EXPLORE CAREERS</h6>
+          <a href="guide.html">
+            <img
+              src="https://cdn2.hubspot.net/hubfs/6570376/hub_generated/resized/1af430d8-cc35-4ae0-8e0c-23bdaad97d25.png"
+              alt=""
+          /></a>
+        </div>
+      </div>
+
+      <div id="last">
+        <h1>Other ways to get in touch</h1>
         <p>
-          Our team would love to work with you to understand your current
-          operation and provide a free automation ROI analysis.
+          Interested in career opportunities with Fathom? Check out our
+          <span>current openings</span> or email
+          <span>careers@fathomhealth.com.</span>
         </p>
-
-        <form id="form">
-          <label for="">First Name<span>*</span></label>
-          <input type="text" required />
-          <label for="">Last Name<span>*</span></label>
-          <input type="text" required />
-          <label for="">Company Email<span>*</span></label>
-          <input type="email" required />
-          <label for="">Phone Number<span>*</span></label>
-          <input type="number" name="" id="" required />
-          <label for="">Message</label>
-          <input type="text" name="" id="" required />
-          <div>
-            <input type="checkbox" name="" id="checkbox" /> Yes, I want to
-            subscribe to Fathom blog updates.
+        <div id="insidediv">
+          <div class="box">
+            <img
+              src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8751b7aa63f43e28b8e2bb_noun_Email_3215035.svg"
+              alt=""
+            />
+            <h1>Email</h1>
+            <p>hi@fathomhealth.com</p>
           </div>
-
-          <input id="submit" type="submit" />
-        </form>
+          <div class="box">
+            <img
+              src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8751eb6b2b0379acfd3ce3_noun_chatting_2986337.svg"
+              alt=""
+            />
+            <h1>Chat</h1>
+            <p>Monday - Friday 9am - 7pm PST</p>
+          </div>
+          <div class="box">
+            <img
+              src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8a0475f99d7c5ee4735bc0_noun_golden%20gate%20bridge_1982072.svg"
+              alt=""
+            />
+            <h1>San Francisco</h1>
+            <p>51 Federal Street Suite 402 San Francisco, CA 94107</p>
+          </div>
+          <div class="box">
+            <img
+              src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8a04e306f6706b2dd2dd8b_noun_building_2525860.svg"
+              alt=""
+            />
+            <h1>Toronto</h1>
+            <p>250 University Avenue Suite 231 Toronto, ON M5H 3E5</p>
+          </div>
+        </div>
       </div>
-      <div id="sidebarb">
-        <h1>Not ready for a call yet?</h1>
-        <h3>We would love to send you some additional details.</h3>
-        <h6>REQUEST A WHITE PAPER</h6>
-        <h1>Interested in career opportunities with Fathom?</h1>
-        <h3>Check our our open positions at the link below.</h3>
-        <h6>EXPLORE CAREERS</h6>
-        <a href="guide.html">
-          <img
-            src="https://cdn2.hubspot.net/hubfs/6570376/hub_generated/resized/1af430d8-cc35-4ae0-8e0c-23bdaad97d25.png"
-            alt=""
-        /></a>
-      </div>
+      <div id="footerfun_section"></div>
     </div>
-
-    <div id="last">
-      <h1>Other ways to get in touch</h1>
-      <p>
-        Interested in career opportunities with Fathom? Check out our
-        <span>current openings</span> or email
-        <span>careers@fathomhealth.com.</span>
-      </p>
-      <div id="insidediv">
-        <div class="box">
-          <img
-            src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8751b7aa63f43e28b8e2bb_noun_Email_3215035.svg"
-            alt=""
-          />
-          <h1>Email</h1>
-          <p>hi@fathomhealth.com</p>
-        </div>
-        <div class="box">
-          <img
-            src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8751eb6b2b0379acfd3ce3_noun_chatting_2986337.svg"
-            alt=""
-          />
-          <h1>Chat</h1>
-          <p>Monday - Friday 9am - 7pm PST</p>
-        </div>
-        <div class="box">
-          <img
-            src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8a0475f99d7c5ee4735bc0_noun_golden%20gate%20bridge_1982072.svg"
-            alt=""
-          />
-          <h1>San Francisco</h1>
-          <p>51 Federal Street Suite 402 San Francisco, CA 94107</p>
-        </div>
-        <div class="box">
-          <img
-            src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8a04e306f6706b2dd2dd8b_noun_building_2525860.svg"
-            alt=""
-          />
-          <h1>Toronto</h1>
-          <p>250 University Avenue Suite 231 Toronto, ON M5H 3E5</p>
-        </div>
-      </div>
-    </div>
-    <div id="footer"></div>
   </body>
 </html>
-<script src="Scripts/contact.js" type="module"></script>
+<!-- <script src="Scripts/contact.js"></script> -->
+<script type="module">
+  import {
+    navbarfun,
+    footerfun,
+    hamburgerFun,
+    menu_cross_iconFun,
+  } from "./component/navbar.js";
+  // console.log(navbarfun);
+  let nav_container = document.getElementById("navbar_container");
+  nav_container.innerHTML = navbarfun();
+  let footerfun_section = document.getElementById("footerfun_section");
+  footerfun_section.innerHTML = footerfun();
+  let hamburger = document.getElementById("hamburger");
+  let menu_cross_icon = document.getElementById("menu_cross_icon");
+  let container = document.querySelector(".nav_pos_container");
+  hamburger.addEventListener("click", () => {
+    container.style.position = "absolute";
+    container.style.zIndex = -"1";
+    hamburgerFun();
+  });
+  menu_cross_icon.addEventListener("click", () => {
+    container.style.position = "relative";
+    container.style.zIndex = "0";
+    menu_cross_iconFun();
+  });
+</script>
+<!-- <script type="text/javascript" src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js"></script> -->
