--- a/insight.html
+++ b/insight.html
@@ -11,6 +11,7 @@
   <body>
     <div id="navbar"></div>
 
+
     <div id="header">
       <div id="title">
         <h1>News, resources, and insights</h1>
@@ -35,11 +36,20 @@
       </div>
     </div>
 
+
+
+
+
+
+
     <div class="mid-header">
       <div class="sub-mid-header">
+
+
         <div>
           <img src="https://blog.fathomhealth.com/hubfs/future.jpg" alt="" />
         </div>
+
         <div>
           <div>
             <h6>INDUSTRY NEWS</h6>
@@ -64,10 +74,20 @@
             </p>
           </div>
         </div>
+
+
       </div>
     </div>
 
-    <div class="chatbox-wrapper">
+
+
+
+
+
+
+
+
+    <!-- <div class="chatbox-wrapper">
       <div class="chatbox-toggle">
         <i class="bx bx-message-dots"></i>
         <img
@@ -121,7 +141,10 @@
           </form>
         </div>
       </div>
-    </div>
+    </div> -->
+
+
+    
 
     <div class="container">
       <div class="container1">
@@ -163,5 +186,12 @@
   let navbar = document.getElementById("navbar");
   navbar.innerHTML = navbarfun();
   let footer = document.getElementById("footer");
+
   footer.innerHTML = footerfun();
+  import { messageBox } from "./component/chat-box.js";
+
+  console.log(messageBox)
+
 </script>
+
+
