--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
                 </a>
             </div>
 
-            <!-- blank container -->
+            <!-- blank container row wise -->
             <div class="row row-justify-center"></div>
         </div>
     </div>
