--- a/qoute.html
+++ b/qoute.html
@@ -113,8 +113,10 @@
                 </div>
             </div>
             <div id="download-app-img">
+                <a href="https://www.fathomhealth.com/outsourced-medical-coding-services-rfp-guide?utm_referrer=https%3A%2F%2Ffathomhealth.com%2F">
                 <img src="https://no-cache.hubspot.com/cta/default/6570376/cbce885e-ffd9-4056-9ef0-5e400ef1f9da.png"
                     alt="download-app-img">
+                </a>
             </div>
         </div>
         <div id="bottom-div">
