some changes made in index file

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </button>
       </div>
       <img
+        id="image"
         src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e80153f9d7551fe59c817f0_dots.svg"
         alt="dot_image"
       />
