--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
                 <h1 class="heading">On a mission to structure&nbspthe world's healthcare data</h1>
                 <div class="section-subtitle text-large margin-top">
                     Fathom has brought together a world-class team of technologists, designers, and business people to fix one of the most broken parts of the healthcare system.</div>
-                <a href="https://boards.greenhouse.io/fathom" class="button margin-top w-inline-block">
+                <a href="./careers.html" class="button margin-top w-inline-block">
                     <div>EXPLORE&nbsp;CAREERS</div> 
                     <!-- non breaking element -->
                 </a>
